--- a/NewTraingLog/app/src/main/res/layout/logging_list_row.xml
+++ b/NewTraingLog/app/src/main/res/layout/logging_list_row.xml
@@ -6,20 +6,39 @@
     android:padding="5dp">
 
     <TextView
-        android:id="@+id/customTV"
-        android:layout_width="333dp"
+        android:id="@+id/repsView"
+        android:layout_width="166dp"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/deleteButton"
         android:layout_marginEnd="1dp"
         android:layout_marginRight="1dp"
         android:layout_toLeftOf="@+id/deleteButton"
         android:layout_toStartOf="@+id/deleteButton"
-        android:text="TextView"
+        android:textSize="20sp"
+        android:textColor="@color/textColor"
+        android:paddingTop="3dp"
+        android:paddingBottom="3dp"
+        android:paddingRight="15dp"
+        android:textAlignment="viewEnd"
+        android:gravity="end"
+        />
+
+    <TextView
+        android:id="@+id/weightsView"
+        android:layout_width="166dp"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/deleteButton"
+        android:layout_marginEnd="1dp"
+        android:layout_marginRight="1dp"
+        android:layout_toLeftOf="@id/repsView"
+        android:layout_toStartOf="@id/repsView"
         android:textSize="20sp"
         android:paddingLeft="10dp"
         android:textColor="@color/textColor"
         android:paddingTop="3dp"
         android:paddingBottom="3dp"
+        android:textAlignment="viewEnd"
+        android:gravity="end"
         />
 
     <ImageView
