--- a/NewTraingLog/app/src/main/res/layout/edit_exercise_fragment.xml
+++ b/NewTraingLog/app/src/main/res/layout/edit_exercise_fragment.xml
@@ -3,27 +3,37 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/backgroudColor">
+    android:id="@+id/testID">
+
 
     <TextView
-        android:id="@+id/list_item_title"
+        android:id="@+id/choose_exercise_title"
         android:layout_width="match_parent"
-        android:gravity="center"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        style="@style/customTextViewStyle"/>
+        android:gravity="center"
+        style="@style/customTextViewStyle"
+        />
 
     <ListView
-        android:id="@+id/list_item_ListView"
+        android:id="@+id/exercise_item_ListView"
         android:layout_width="match_parent"
-        android:layout_height="479dp"
-        android:layout_below="@+id/list_item_title"
-        android:layout_above="@+id/navigation"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/choose_exercise_title"
         android:layout_centerHorizontal="true"
         android:padding="15dp"
-        style="@style/customListViewStyle"
-        />
+        android:paddingBottom="0dp"
+        android:layout_above="@id/add_exercise_button"
+        style="@style/customListViewStyle"/>
+
+    <Button
+        android:id="@+id/add_exercise_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/navigation"
+        android:layout_centerHorizontal="true"
+        android:text="Add exercise"
+        android:textSize="12dp" />
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
@@ -35,6 +45,5 @@
         app:itemIconTint="@color/bottomNavTint"
         app:itemTextColor="@color/bottomTextColor"
         />
-
 
 </RelativeLayout>
