--- a/NewTraingLog/app/src/main/res/layout/display_log_row.xml
+++ b/NewTraingLog/app/src/main/res/layout/display_log_row.xml
@@ -5,13 +5,18 @@
 
 
     <TextView
-        android:id="@+id/display_log_row_text_view"
-        android:layout_width="match_parent"
+        android:id="@+id/weightTV"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:textSize="20sp" />
+    <TextView
+        android:id="@+id/repsTV"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
-        android:paddingLeft="10dp"
-        android:typeface="monospace"
-        android:textColor="@color/textColor"
-        android:paddingTop="3dp"
-        android:paddingBottom="3dp"/>
+        android:layout_toEndOf="@id/weightTV"
+        android:layout_toRightOf="@id/weightTV"
+        android:text="TextView"
+        android:layout_alignParentRight="true"/>
 </RelativeLayout>
