--- a/NewTraingLog/app/src/main/res/layout/display_log_row.xml
+++ b/NewTraingLog/app/src/main/res/layout/display_log_row.xml
@@ -6,17 +6,33 @@
 
     <TextView
         android:id="@+id/weightTV"
-        android:layout_width="200dp"
+        style="@style/historyRowTextView"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textSize="20sp" />
+        android:layout_alignParentLeft="true" />
+
+    <TextView
+        android:id="@+id/mesurementTV"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/weightTV"
+        android:layout_alignParentBottom="true"
+        />
+
     <TextView
         android:id="@+id/repsTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:layout_toEndOf="@id/weightTV"
-        android:layout_toRightOf="@id/weightTV"
-        android:text="TextView"
-        android:layout_alignParentRight="true"/>
+        style="@style/historyRowTextView"
+        android:layout_toLeftOf="@id/repsText"
+        android:layout_toRightOf="@+id/mesurementTV"/>
+
+    <TextView
+        android:id="@+id/repsText"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:text="reps"
+        android:layout_alignParentBottom="true"
+        />
 </RelativeLayout>
