--- a/NewTraingLog/app/src/main/res/layout/list_in_list.xml
+++ b/NewTraingLog/app/src/main/res/layout/list_in_list.xml
@@ -6,9 +6,12 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="BOOM"
         android:layout_alignParentTop="true"
-        android:id="@+id/titleTv"/>
+        android:layout_centerInParent="true"
+        android:id="@+id/titleTv"
+        android:background="@drawable/bottomline"
+        android:gravity="center"
+        android:textSize="20sp"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
