--- a/NewTraingLog/app/src/main/res/layout/display_log_row.xml
+++ b/NewTraingLog/app/src/main/res/layout/display_log_row.xml
@@ -7,7 +7,7 @@
     <TextView
         android:id="@+id/weightTV"
         style="@style/historyRowTextView"
-        android:layout_width="150dp"
+        android:layout_width="125dp"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true" />
 
@@ -17,22 +17,25 @@
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/weightTV"
         android:layout_alignParentBottom="true"
+        android:gravity="left"
         />
 
     <TextView
         android:id="@+id/repsTV"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         style="@style/historyRowTextView"
-        android:layout_toLeftOf="@id/repsText"
         android:layout_toRightOf="@+id/mesurementTV"/>
 
     <TextView
         android:id="@+id/repsText"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
         android:text="reps"
         android:layout_alignParentBottom="true"
+        android:layout_toRightOf="@id/repsTV"
+        android:gravity="left"
+
+
         />
 </RelativeLayout>
