--- a/NewTraingLog/app/src/main/res/layout/list_in_list.xml
+++ b/NewTraingLog/app/src/main/res/layout/list_in_list.xml
@@ -11,7 +11,9 @@
         android:id="@+id/titleTv"
         android:background="@drawable/bottomline"
         android:gravity="center"
-        android:textSize="20sp"/>
+        android:textSize="20sp"
+        android:paddingBottom="5dp"
+        android:paddingHorizontal="60dp"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
