--- a/NewTraingLog/app/src/main/res/values/custom_styles.xml
+++ b/NewTraingLog/app/src/main/res/values/custom_styles.xml
@@ -31,4 +31,7 @@
         <item name="android:textSize">20sp</item>
         <item name="android:textStyle">bold</item>
     </style>
+    <style name="editExerciseButtons">
+        <item name="android:layout_marginBottom">5dp</item>
+    </style>
 </resources>
