--- a/NewTraingLog/app/src/main/res/layout/edit_exercise_fragment.xml
+++ b/NewTraingLog/app/src/main/res/layout/edit_exercise_fragment.xml
@@ -28,8 +28,7 @@
 
     <ImageButton
         android:id="@+id/add_exercise_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+
         android:layout_above="@+id/navigation"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="100dp"
@@ -40,12 +39,11 @@
 
     <ImageButton
         android:id="@+id/saveEditButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+
         android:layout_above="@+id/navigation"
         android:layout_alignParentRight="true"
         android:layout_marginRight="100dp"
-        android:src="@drawable/round_save_black_48dp"
+        android:src="@drawable/content_save"
         android:background="@drawable/circle_background"
         style="@style/editExerciseButtons"
         />
