--- a/NewTraingLog/app/src/main/res/values/custom_styles.xml
+++ b/NewTraingLog/app/src/main/res/values/custom_styles.xml
@@ -33,5 +33,7 @@
     </style>
     <style name="editExerciseButtons">
         <item name="android:layout_marginBottom">5dp</item>
+        <item name="android:layout_width">60dp</item>
+        <item name="android:layout_height">60dp</item>
     </style>
 </resources>
