--- a/NewTraingLog/app/src/main/res/layout/calendar_fragment.xml
+++ b/NewTraingLog/app/src/main/res/layout/calendar_fragment.xml
@@ -2,8 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".MainActivity">
 
-
+    <sun.bob.mcalendarview.MCalendarView
+        android:layout_width="400dp"
+        android:layout_height="400dp"
+        android:id="@+id/calendar"
+        tools:context=".CalendarFragment"
+        />
 
 </RelativeLayout>
