--- a/NewTraingLog/app/src/main/res/values/custom_styles.xml
+++ b/NewTraingLog/app/src/main/res/values/custom_styles.xml
@@ -32,8 +32,9 @@
         <item name="android:textStyle">bold</item>
     </style>
     <style name="editExerciseButtons">
-        <item name="android:layout_marginBottom">5dp</item>
         <item name="android:layout_width">60dp</item>
         <item name="android:layout_height">60dp</item>
+        <item name="android:layout_alignBottom">@id/choose_exercise_title</item>
+        <item name="android:background">@color/bottomNavBarColor</item>
     </style>
 </resources>
