--- a/NewTraingLog/app/src/main/res/layout/display_choose_program_fragment.xml
+++ b/NewTraingLog/app/src/main/res/layout/display_choose_program_fragment.xml
@@ -10,9 +10,23 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:gravity="center_horizontal"
-        android:text="Display: Choose program"
-        style="@style/customTextViewStyle"/>
+        android:gravity="left"
+        android:text="Choose Program"
+        style="@style/customTextViewStyle"
+        android:layout_toRightOf="@id/displayImage"
+
+        />
+
+    <ImageView
+        android:id="@+id/displayImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignBottom="@id/choose_program_TV"
+        android:background="@color/bottomNavBarColor"
+        android:src="@drawable/outline_personal_video_white_24dp"
+        style="@style/titleIconStye"/>
 
     <ListView
         android:id="@+id/displayProgramListview"
