--- a/NewTraingLog/app/src/main/res/values/custom_styles.xml
+++ b/NewTraingLog/app/src/main/res/values/custom_styles.xml
@@ -13,6 +13,7 @@
     <style name="customTextViewStyle">
         <item name="android:paddingTop">10dp</item>
         <item name="android:paddingBottom">10dp</item>
+        <item name="android:paddingLeft">15dp</item>
         <item name="android:background">@color/bottomNavBarColor</item>
         <item name="android:textSize">25sp</item>
         <item name="android:textColor">@color/textColor</item>
@@ -36,5 +37,8 @@
         <item name="android:layout_height">60dp</item>
         <item name="android:layout_alignBottom">@id/choose_exercise_title</item>
         <item name="android:background">@color/bottomNavBarColor</item>
+    </style>
+    <style name="titleIconStye">
+        <item name="android:paddingLeft">10dp</item>
     </style>
 </resources>
