--- a/NewTraingLog/app/src/main/res/layout/display_log_fragment.xml
+++ b/NewTraingLog/app/src/main/res/layout/display_log_fragment.xml
@@ -10,16 +10,31 @@
         android:layout_height="wrap_content"
         android:src="@drawable/baseline_arrow_back_ios_black_48dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true" />
+        android:layout_alignParentLeft="true"
+        style="@style/displayLogTopNavigationStyle"/>
 
     <TextView
         android:id="@+id/dateLogged"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_alignParentTop="true"
         android:textSize="25sp"
-        android:layout_alignBottom="@id/leftArrow"/>
+        android:gravity="center"
+        android:layout_alignBottom="@id/leftArrow"
+        android:layout_toLeftOf="@id/calendarButton"
+        android:layout_toRightOf="@id/leftArrow"
+
+        style="@style/displayLogTopNavigationStyle"/>
+
+    <ImageButton
+        android:id="@+id/calendarButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/logListView"
+        android:src="@drawable/calendar"
+        android:layout_toLeftOf="@id/rightArrow"
+        android:layout_alignBottom="@id/dateLogged"
+        style="@style/displayLogTopNavigationStyle"/>
 
     <ImageButton
         android:id="@+id/rightArrow"
@@ -28,6 +43,7 @@
         android:src="@drawable/baseline_arrow_forward_ios_black_48dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
+        style="@style/displayLogTopNavigationStyle"
         />
 
     <ListView
@@ -37,15 +53,9 @@
         android:layout_centerInParent="true"
         android:divider="@null"
         android:listSelector="@android:color/transparent"
-        android:layout_above="@+id/calendarButton"
+        android:layout_above="@+id/navigation"
         android:layout_below="@+id/dateLogged"/>
-    <ImageButton
-        android:id="@+id/calendarButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/navigation"
-        android:layout_alignParentRight="true"
-        android:src="@drawable/calendar"/>
+
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
