--- a/NewTraingLog/app/src/main/res/values/custom_styles.xml
+++ b/NewTraingLog/app/src/main/res/values/custom_styles.xml
@@ -41,4 +41,8 @@
     <style name="titleIconStye">
         <item name="android:paddingLeft">10dp</item>
     </style>
+    <style name="displayLogTopNavigationStyle">
+        <item name="android:background">@color/bottomNavBarColor</item>
+        <item name="android:paddingTop">5dp</item>
+    </style>
 </resources>
