--- a/NewTraingLog/app/src/main/res/layout/log_workout_fragment.xml
+++ b/NewTraingLog/app/src/main/res/layout/log_workout_fragment.xml
@@ -5,6 +5,16 @@
     android:layout_height="match_parent"
     >
 
+    <ImageButton
+        android:id="@+id/backButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/baseline_arrow_back_ios_black_48dp"
+        style="@style/displayLogTopNavigationStyle"
+        android:layout_alignBottom="@id/tittelTV"/>
+
     <TextView
         android:id="@+id/tittelTV"
         android:layout_width="match_parent"
@@ -13,6 +23,8 @@
         android:layout_centerHorizontal="true"
         android:gravity="center_horizontal"
         style="@style/customTextViewStyle"
+        android:layout_toRightOf="@id/backButton"
+
         />
 
     <EditText
@@ -62,11 +74,10 @@
     <ListView
         android:id="@+id/log_workout_listView"
         android:layout_width="match_parent"
-        android:layout_height="421dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="90dp"
+        android:layout_below="@id/weightET"
         android:padding="15dp"
         android:layout_above="@+id/navigation"
         style="@style/customListViewStyle"/>
