--- a/NewTraingLog/app/src/main/res/layout/logging_list_row.xml
+++ b/NewTraingLog/app/src/main/res/layout/logging_list_row.xml
@@ -6,40 +6,39 @@
     android:padding="5dp">
 
     <TextView
-        android:id="@+id/repsView"
-        android:layout_width="166dp"
+        android:id="@+id/weightsView"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/deleteButton"
-        android:layout_marginEnd="1dp"
-        android:layout_marginRight="1dp"
-        android:layout_toLeftOf="@+id/deleteButton"
-        android:layout_toStartOf="@+id/deleteButton"
-        android:textSize="20sp"
-        android:textColor="@color/textColor"
-        android:paddingTop="3dp"
-        android:paddingBottom="3dp"
-        android:paddingRight="15dp"
-        android:textAlignment="viewEnd"
-        android:gravity="end"
+        android:layout_alignBottom="@id/deleteButton"
+        style="@style/historyRowTextView"
         />
+    <TextView
+        android:id="@+id/logMesurementTV"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/weightsView"
+        android:layout_alignBottom="@id/weightsView"
+        android:gravity="left"/>
 
     <TextView
-        android:id="@+id/weightsView"
-        android:layout_width="166dp"
+        android:id="@+id/repsView"
+        android:layout_width="75dp"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/deleteButton"
-        android:layout_marginEnd="1dp"
-        android:layout_marginRight="1dp"
-        android:layout_toLeftOf="@id/repsView"
-        android:layout_toStartOf="@id/repsView"
-        android:textSize="20sp"
-        android:paddingLeft="10dp"
-        android:textColor="@color/textColor"
-        android:paddingTop="3dp"
-        android:paddingBottom="3dp"
-        android:textAlignment="viewEnd"
-        android:gravity="end"
+        android:layout_alignBottom="@id/weightsView"
+        android:layout_toRightOf="@id/logMesurementTV"
+        style="@style/historyRowTextView"
         />
+    <TextView
+        android:id="@+id/logRepsText"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/weightsView"
+        android:layout_toRightOf="@id/repsView"
+        android:layout_toLeftOf="@id/deleteButton"
+        android:gravity="left"
+        android:text="reps" />
+
+
 
     <ImageView
         android:id="@+id/deleteButton"
