--- a/NewTraingLog/app/src/main/res/layout/list_in_list.xml
+++ b/NewTraingLog/app/src/main/res/layout/list_in_list.xml
@@ -13,7 +13,8 @@
         android:gravity="center"
         android:textSize="20sp"
         android:paddingBottom="5dp"
-        android:paddingHorizontal="60dp"/>
+        android:paddingHorizontal="60dp"
+        android:textColor="@color/textColor"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
