--- a/NewTraingLog/app/src/main/res/layout/home_layout_fragment.xml
+++ b/NewTraingLog/app/src/main/res/layout/home_layout_fragment.xml
@@ -41,6 +41,17 @@
         android:background="@drawable/bottomline"
         />
 
+    <Button
+        android:id="@+id/statsButton"
+        android:layout_width="225dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/displayLogMenuButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="35dp"
+        android:text="Stats"
+        android:textColor="@color/textColor"
+        android:background="@drawable/bottomline"/>
+
     <Switch
         android:id="@+id/mesure_switch"
         android:layout_width="wrap_content"
