change text color + add apk file

--- a/NewTraingLog/app/src/main/res/layout/list_row_more_icon.xml
+++ b/NewTraingLog/app/src/main/res/layout/list_row_more_icon.xml
@@ -9,11 +9,9 @@
         android:id="@+id/customTV"
         android:layout_width="333dp"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/deleteButton"
         android:layout_marginEnd="1dp"
         android:layout_marginRight="1dp"
-        android:layout_toLeftOf="@+id/deleteButton"
-        android:layout_toStartOf="@+id/deleteButton"
+        android:layout_toLeftOf="@+id/moreButton"
         android:text="TextView"
         android:textSize="20sp"
         android:paddingLeft="10dp"
